CUBE_IDE/.metadata/.plugins/org.eclipse.cdt.ui/first_1.build.log
15:22:11 **** Incremental Build of configuration Debug for project first_1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:96:30: error: 'LED_GREEN_GPIO_Port' undeclared (first use in this function)
   96 |           HAL_GPIO_TogglePin(LED_GREEN_GPIO_Port, LED_GREEN_Pin);
      |                              ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:96:30: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:96:51: error: 'LED_GREEN_Pin' undeclared (first use in this function)
   96 |           HAL_GPIO_TogglePin(LED_GREEN_GPIO_Port, LED_GREEN_Pin);
      |                                                   ^~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:22:12 Build Failed. 3 errors, 0 warnings. (took 585ms)

